Update for version 1.1
* Replace item_to_create with item_to_spawn
* Add missing tooltip
* Rename actions and items

--- a/locale/en/all.cfg
+++ b/locale/en/all.cfg
@@ -24,6 +24,7 @@ config-button-give-upgrade-tool=Click here to get an upgrade planning tool.
 config-button-delete-upgrade-tool=Click here to delete all upgrade planning tools.
 config-button-import-config=Click to open a dialog where you can import a config.
 config-button-export-config=Click here to export your config as a string.
+config-button-export-planner=Click here to export to a normal upgrade planner.
 blueprint-upgrade-successful=Blueprint upgrade successful.
 blueprint-book-upgrade-successful=Blueprint book upgrade: __1__ blueprints upgraded successfully.
 partial-upgrade-planner-export=Could not set conversion between '__1__' and '__2__'.
